[metadata]
name = safir
description = The LSST SQuaRE framework for Roundtable bots.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
url = https://safir.lsst.io
project_urls =
    Change log = https://safir.lsst.io/changelog.html
    Source code = https://github.com/lsst-sqre/safir
    Issue tracker = https://github.com/lsst-sqre/safir/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.8
setup_requires =
    setuptools_scm
install_requires =
    fastapi
    httpx>=0.20.0
    pydantic
    starlette
    structlog>=21.2.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    asgi-lifespan==1.0.1
    coverage[toml]==6.3.1
    flake8==4.0.1
    mypy==0.931
    pre-commit==2.17.0
    pytest==6.2.5
    pytest-asyncio==0.17.2
    respx==0.19.2
    # documentation
    documenteer>=0.5,<0.7
    lsst-sphinx-bootstrap-theme<0.3
    sphinx-automodapi==0.14.1
    sphinx-prompt
kubernetes =
    kubernetes_asyncio

[flake8]
max-line-length = 79
# E203: whitespace before :, flake8 disagrees with PEP-8
# W503: line break after binary operator, flake8 disagrees with PEP-8
ignore = E203, W503
exclude =
    docs/conf.py

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
