[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "safir"
description = "The Rubin Observatory SQuaRE framework for FastAPI services."
license = {file = "LICENSE"}
readme= "README.md"
keywords = [
    "rubin",
    "lsst",
]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "aiokafka>=0.11,<1",
    "click<9",
    "cryptography<44",
    "dataclasses-avroschema>=0.65.3,<1",
    "fastapi<1",
    "faststream>0.5,<0.6",
    "gidgethub<6",
    "httpx>=0.20.0,<1",
    "pydantic>2,<3",
    "pydantic-core",
    "pydantic-settings!=2.6.0,<3",
    "python-schema-registry-client>=2.6,<3",
    "safir-logging<7",
    "starlette<1",
    "structlog>=21.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
arq = [
    "safir-arq<7",
]
db = [
    "alembic[tz]<2",
    "asyncpg<1",
    "sqlalchemy[asyncio]>=2.0.0,<3",
]
dev = [
    "asgi-lifespan",
    "coverage[toml]",
    "fastapi>=0.93.0",
    "mypy",
    "pre-commit",
    "pytest>=6.2.0",
    "pytest-asyncio",
    "pytest-cov",
    "redis>=5,<6",
    "respx",
    "scriv",
    "sqlalchemy[mypy]",
    "testcontainers[postgres,redis]",
    "uvicorn",
    # documentation
    "documenteer[guide]>=1.4.1",
    "autodoc_pydantic",
]
gcs = [
    "google-auth<3",
    "google-cloud-storage<3"
]
kubernetes = [
    "kubernetes_asyncio<31"
]
redis = [
    "redis>4.5.2,<6",
]
uws = [
    "alembic[tz]<2",
    "asyncpg<1",
    "google-auth<3",
    "google-cloud-storage<3",
    "jinja2<4",
    "python-multipart",
    "safir-arq<7",
    "sqlalchemy[asyncio]>=2.0.0,<3",
    "vo-models>=0.4.1,<1",
]

[[project.authors]]
name = "Association of Universities for Research in Astronomy, Inc. (AURA)"
email = "sqre-admin@lists.lsst.org"

[project.urls]
Homepage = "https://safir.lsst.io"
Source = "https://github.com/lsst-sqre/safir"
"Change log" = "https://safir.lsst.io/changelog.html"
"Issue tracker" = "https://github.com/lsst-sqre/safir/issues"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."

[tool.coverage.run]
parallel = true
branch = true
source = ["safir"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
python_files = [
    "tests/*.py",
    "tests/*/*.py"
]
norecursedirs = [
    "tests/data/**"
]
