[project]
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/
name = "safir"
description = "The Rubin Observatory SQuaRE framework for FastAPI services."
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["rubin", "lsst"]
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.11,<1",
    "click>=8.2.0,<9",
    "cryptography<46",
    "dataclasses-avroschema>=0.65.7,<1",
    "fastapi>=0.100,<1",
    "faststream>0.5,<0.6",
    "gidgethub<6",
    "httpx>=0.20.0,<1",
    "pydantic>2,<3",
    "pydantic-core",
    "pydantic-settings!=2.6.0,<3",
    "python-schema-registry-client>=2.6,<3",
    "safir-logging",
    "sentry-sdk>=2,<3",
    "starlette<1",
    "structlog>=21.2.0",
]
dynamic = ["version"]

[project.optional-dependencies]
arq = [
    "safir-arq>10.2.0",
]
db = [
    "alembic[tz]<2",
    "asyncpg<1",
    "sqlalchemy[asyncio]>=2.0.0,<3",
]
dev = [
    "alembic[tz]>=1.16",
    "asgi-lifespan",
    "coverage[toml]",
    "fastapi>=0.93.0",
    "mypy",
    "pre-commit",
    "pytest>=6.2.0",
    "pytest-asyncio",
    "pytest-cov",
    "redis>=5",
    "respx",
    "scriv",
    "sqlalchemy[mypy]",
    "testcontainers[postgres,redis]",
    "uvicorn",
    # documentation
    "documenteer[guide]>=1.4.1",
    "autodoc_pydantic",
]
gcs = [
    "google-auth<3",
    "google-cloud-storage<4"
]
kubernetes = [
    "kubernetes_asyncio<33"
]
redis = [
    "redis>4.5.2,<7",
]
testcontainers = [
    "testcontainers>=4.10"
]
uws = [
    "google-auth<3",
    "google-cloud-storage<4",
    "jinja2<4",
    "python-multipart",
    "safir-arq>10.2.0",
    "vo-models>=0.4.1,<1",
]

[[project.authors]]
name = "Association of Universities for Research in Astronomy, Inc. (AURA)"
email = "sqre-admin@lists.lsst.org"

[project.urls]
Homepage = "https://safir.lsst.io"
Source = "https://github.com/lsst-sqre/safir"
"Change log" = "https://safir.lsst.io/changelog.html"
"Issue tracker" = "https://github.com/lsst-sqre/safir/issues"

[build-system]
requires = [
    "setuptools>=61",
    "wheel",
    "setuptools_scm[toml]>=6.2"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
root = ".."

[tool.coverage.run]
parallel = true
branch = true
source = ["safir"]

[tool.coverage.paths]
source = ["src", ".tox/*/site-packages"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:"
]

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "strict"
python_files = [
    "tests/*.py",
    "tests/*/*.py"
]
norecursedirs = [
    "tests/data/**"
]
